--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
   <head>
-    <title>Application Checking Tool</title>
+    <title>Application Version Checker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--
     <link rel="stylesheet" href="styles.css">
+    -->
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
     <script src="node_modules/es6-shim/es6-shim.min.js"></script>
