--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
           }
         },
         map: {
-            'ng2-material': 'node_modules/ng2-material'
+            'ng2-material': 'node_modules/ng2-material',
+            'lodash': 'node_modules/lodash/lodash.js'
         }
       });
       System.import('app/main')
