--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
   <head>
     <title>Application Version Checker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- added base href by Connie Leung, 20160502 -->
+    <base href="/">
+    <!-- end -->    
     <!--
     <link rel="stylesheet" href="styles.css">
     -->
@@ -14,6 +17,7 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
+    <script src="node_modules/angular2/bundles/router.dev.js"></script>
     <!-- added by Connie Leung, 20160430 -->
     <script src="node_modules/ng2-material/all.js"></script>
     <!-- 2. Configure SystemJS -->
