Render donut chart to display database schema hard disk consumption.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <script src="node_modules/ng2-charts/components/charts/charts.js"></script>
     <!-- end ng2-charts -->
 
+    <style> .chart {display: block; width:70%;} </style>
+
     <!-- 3. load ng-material2 -->
     <link rel="stylesheet" href="node_modules/ng2-material/dist/ng2-material.css">
     <link rel="stylesheet" href="node_modules/ng2-material/dist/font.css">
