Add css to show legend in chart. Show barchart to display number of objects in an schema.

--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
     <script src="node_modules/ng2-charts/components/charts/charts.js"></script>
     <!-- end ng2-charts -->
 
-    <style> .chart {display: block; width:70%;} </style>
-
     <!-- 3. load ng-material2 -->
     <link rel="stylesheet" href="node_modules/ng2-material/dist/ng2-material.css">
     <link rel="stylesheet" href="node_modules/ng2-material/dist/font.css">
     <!-- 3. end ng-material2-->
+
+    <!-- 4 load Chart css -->
+    <link rel="stylesheet" href="app/chart.css">
+    <!-- 4 load Chart css ends -->
 
     <!-- http://stackoverflow.com/questions/35059201/angular2-trouble-in-integrating-ng2-material -->
     <script>
