Upgrade to lodash 4.0.0

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
         map: {
             'ng2-material': 'node_modules/ng2-material',
             'lodash': 'node_modules/lodash/lodash.js',
-            'ng2-charts': 'node_modules/ng2-charts/components/charts'/*,
-            'chart.js': 'node_modules/chart.js'*/
+            'ng2-charts': 'node_modules/ng2-charts/components/charts'
         }
       });
       System.import('app/main')
